--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ javadoc {
 
 repositories {
     mavenCentral()
+    maven {
+        name = "hytale-release"
+        url = uri("https://maven.hytale.com/release")
+    }
 }
 
 
@@ -57,6 +61,8 @@ dependencies {
     //implementation 'org.xerial:sqlite-jdbc:3.45.1.0'
     shadowBundle 'org.slf4j:slf4j-simple:2.0.17'
     shadowBundle 'org.xerial:sqlite-jdbc:3.45.1.0'
+    compileOnly 'net.luckperms:api:5.4'
+    runtimeOnly(files("./run/LuckPerms-Hytale-5.5.25-beta10.jar"))
 }
 
 test {
